# aioaquarite

./: .gitignore  CHANGES.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aioaquarite/: __init__.py  _coercion.py  auth.py  client.py  const.py  subscription.py
tests/: test_client.py  test_cloud_functions.py  test_get_value_coercion.py  test_subscription.py  test_user_id.py  test_user_pools_subscription.py
tests/fixtures/: pool_data.json
